--- a/dom.yaml
+++ b/dom.yaml
@@ -12,7 +12,7 @@ metadata:
     weblogic.domainUID: sample-domain1
 
 spec:
-  replicas: 1
+  replicas: 2
   clusterName: cluster-1
 
 ---
@@ -65,7 +65,10 @@ spec:
   # images from OCR or create your images using the WebLogic Image Tool.
   # Please refer to the `OCR` and `WebLogic Images` pages in the WebLogic Kubernetes Operator
   # documentation for details.
-  image: "container-registry.oracle.com/middleware/weblogic:14.1.2.0-generic-jdk17-ol8"
+  # image: "container-registry.oracle.com/middleware/weblogic:14.1.2.0-generic-jdk17-ol8"
+  image: "container-registry.oracle.com/middleware/weblogic:12.2.1.4"
+  
+
 
   # Defaults to "Always" if image tag (version) is ':latest'
   imagePullPolicy: "IfNotPresent"
