--- a/ingress-route-osb.yaml
+++ b/ingress-route-osb.yaml
@@ -11,34 +11,34 @@ spec:
       match: PathPrefix(`/console`)
       services:
         - kind: Service
-          name: soainfra-adminserver-ext
+          name: soainfra-adminserver
           port: 7001
           passHostHeader: true
     - kind: Rule
-      match: PathPrefix(`/sbconsole`)
+      match: PathPrefix(`/servicebus`)
       services:
         - kind: Service
-          name: soainfra-adminserver-ext
+          name: soainfra-adminserver
           port: 7001
           passHostHeader: true
     - kind: Rule
       match: PathPrefix(`/em`)
       services:
         - kind: Service
-          name: soainfra-adminserver-ext
+          name: soainfra-adminserver
           port: 7001
           passHostHeader: true
     - kind: Rule
       match: PathPrefix(`/rconsole`)       # Hosted WRC (WLS 14.1.2+)
       services:
         - kind: Service
-          name: soainfra-adminserver-ext
+          name: soainfra-adminserver
           port: 7001
           passHostHeader: true
     - kind: Rule
       match: PathPrefix(`/management`)     # Required for Desktop WRC
       services:
         - kind: Service
-          name: soainfra-adminserver-ext
+          name: soainfra-adminserver
           port: 7001
           passHostHeader: true
