--- a/domain-osb/weblogic-domains/soainfra/domain.yaml
+++ b/domain-osb/weblogic-domains/soainfra/domain.yaml
@@ -19,7 +19,7 @@ spec:
   domainHomeSourceType: PersistentVolume
 
   # The WebLogic Server image that the Operator uses to start the domain
-  image: "container-registry.oracle.com/middleware/soasuite:14.1.2.0-jdk21-ol8-241205"
+  image: "container-registry.oracle.com/middleware/soasuite_cpu:12.2.1.4-jdk8-ol8-251011"
 
   # imagePullPolicy defaults to "Always" if image version is :latest
   imagePullPolicy: Never
@@ -31,7 +31,7 @@ spec:
   # Identify which Secret contains the WebLogic Admin credentials (note that there is an example of
   # how to create that Secret at the end of this file)
   webLogicCredentialsSecret:
-    name: soainfra-domain-credentials-weblogic-credentials
+    name: soainfra-domain-credentials
 
   # Whether to include the server out file into the pod's stdout, default is true
   includeServerOutInPodLog: true
@@ -62,7 +62,7 @@ spec:
     - name: JAVA_OPTIONS
       value: "-Dweblogic.StdoutDebugEnabled=false"
     - name: USER_MEM_ARGS
-      value: "-Djava.security.egd=file:/dev/./urandom -Xms256m -Xmx512m "
+      value: "-Djava.security.egd=file:/dev/./urandom -Xms256m -Xmx1024m "
     volumes:
     - name: weblogic-domain-storage-volume
       persistentVolumeClaim:
@@ -73,8 +73,8 @@ spec:
 
   # adminServer is used to configure the desired behavior for starting the administration server.
   adminServer:
-    adminService:
-      channels:
+    # adminService:
+    #   channels:
     # The Admin Server's NodePort
       #  - channelName: default
       #    nodePort: 30701
